@@ -1,6 +1,16 @@
 /* config.h --- configuration file for OS/2
    Karl Fogel <kfogel@cyclic.com> --- Oct 1995  */
 
+/* This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2, or (at your option)
+   any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.  */
+
 /* This file lives in the os2/ subdirectory, which is only included
  * in your header search path if you're working under IBM C++,
  * and use os2/makefile (with GNU make for OS/2).  Thus, this is the
